# Starr

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
scripts/: attach.sh  kill.sh  restart.sh  start.sh
starr/: __init__.py  __main__.py  app.py  bot.py  config.py  db.py  logging.py  models.py  utils.py
starr/data/: schema.sql
starr/modules/: _code.py  admin.py  code.py  events.py  help.py  meta.py  owner.py  stars.py  tags.py
