[tool.poetry]
name = "starr"
version = "0.4.0"
description = "A sparkly bot designed with Hikari."
homepage = "https://github.com/Jonxslays/Starr"
repository = "https://github.com/Jonxslays/Starr"
authors = ["Jonxslays"]
readme = "README.md"
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
asyncpg = "==0.25.0"
python-dotenv = "==0.20.0"
uvloop = "==0.16.0"
hikari-lightbulb = "==2.2.1"
hikari = {version = "==2.0.0.dev108", extras = ["speedups"]}

[tool.poetry.dev-dependencies]
black = "==22.3.0"
mypy = "==0.942"
nox = "==2022.1.7"
pyright = "==1.1.238"
len8 = "==0.7.2"
flake8 = "==4.0.1"
isort = "==5.10.1"
toml = "==0.10.2"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
force_single_line = true

[tool.len8]
include = ["starr", "noxfile.py"]
code-length = 99
docs-length = 72
strict = true

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "asyncpg"
ignore_missing_imports = true

[tool.pyright]
include = ["starr"]
ignore = ["starr/db.py"]
typeCheckingMode = "strict"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
